--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.4",
+    "nodemon": "^3.0.3",
     "openai": "^4.28.0"
   }
 }
