--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,9 @@ node_modules/
 jspm_packages/
 
 # dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
 
