--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -9,6 +9,10 @@ jobs:
   start_ec2_instance:
     runs-on: ubuntu-latest
 
+    permissions:
+      id-token: write
+      contents: read
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -16,6 +20,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
+          role-to-assume: arn:aws:sts::259421538778:role/Github-actions-role
           aws-region: eu-west-1
 
       - name: Start EC2 Instance
