--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
-      
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -20,7 +20,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: arn:aws:sts::259421538778:role/Github-actions-role
+          role-to-assume:  arn:aws:sts::259421538778:assumed-role/AWSReservedSSO_Student_1c89037c8e645de3/tim.niggemann@docc.techstarter.de:role/Github-actions-role
           aws-region: eu-west-1
 
       - name: Start EC2 Instance
