--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,4 +1,4 @@
-name: Start EC2 Instance
+name: Deploy CloudFormation Stack
 
 on:
   push:
@@ -6,32 +6,19 @@ on:
       - main
 
 jobs:
-  start_ec2_instance:
+  deploy:
     runs-on: ubuntu-latest
-
-    permissions:
-      id-token: write
-      contents: read
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-central-1
 
-
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: eu-central-1
-
-      - name: Start EC2 Instance
-        run: |
-          aws ec2 run-instances \
-            --image-id ami-0a23a9827c6dab833 \
-            --instance-type t2.micro \
-            --subnet-id subnet-02d83099e8a7b60c0 \
-            --key-name chatbot \
-            --security-group-ids sg-05c04f9c099389b81  
+    - name: Deploy CloudFormation Stack
+      run: aws cloudformation deploy --template-file cloudformatio.yaml --stack-name chatbottest --region eu-central-1
