--- a/cloudformatio.yaml
+++ b/cloudformatio.yaml
@@ -93,7 +93,7 @@ Resources:
   MyS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: timschatbots3
+      BucketName: timsmysterylounges3
       AccessControl: Private
       Tags:
         - Key: Name
