--- a/cloudformatio.yaml
+++ b/cloudformatio.yaml
@@ -83,10 +83,10 @@ Resources:
         Fn::Base64: |
           #!/bin/bash -xe
           sudo yum install -y aws-cli
-          AWS_REGION = "eu-central-1"
-          SECRET_NAME = "OPENAI_API_KEY"
-          SECRET = $(aws secretsmanager get-secret-value --region $AWS_REGION --secret-id $SECRET_NAME --query SecretString --output text)
-          export OPENAI_API_KEY = $SECRET
+          export AWS_REGION="eu-central-1"
+          export SECRET_NAME="OPENAI_API_KEY"
+          SECRET=$(aws secretsmanager get-secret-value --region $AWS_REGION --secret-id $SECRET_NAME --query SecretString --output text)
+          export OPENAI_API_KEY=$SECRET
           sudo yum update -y
           sudo yum install -y nodejs 
           sudo yum install -y git
