--- a/cloudformatio.yaml
+++ b/cloudformatio.yaml
@@ -9,9 +9,6 @@ Parameters:
   KeyName:
     Type: AWS::EC2::KeyPair::KeyName
     Description: Name of an existing EC2 KeyPair for SSH access
-  OpenAI_API_KEY:
-    Type: String
-    Description: OpenAI API Key
 Resources:
   EC2Role:
     Type: AWS::IAM::Role
@@ -113,7 +110,7 @@ Resources:
       UserData: 
         Fn::Base64: |
           #!/bin/bash -xe
-          echo "export OPENAI_API_KEY='${OpenAI_API_KEY}'" >> /etc/environment
+          echo "export OPENAI_API_KEY='${OpenAIAPIKEY}'" >> /etc/environment
           sudo yum install -y aws-cli
           sudo yum update -y
           sudo yum install -y nodejs 
