--- a/cloudformatio.yaml
+++ b/cloudformatio.yaml
@@ -111,6 +111,7 @@ Resources:
         Fn::Base64: |
           #!/bin/bash -xe
           echo "export OPENAI_API_KEY='${OpenAIAPIKEY}'" >> /etc/environment
+          echo OPENAI_API_KEY > /var/log/echoSecret.txt
           sudo yum install -y aws-cli
           sudo yum update -y
           sudo yum install -y nodejs 
