--- a/cloudformatio.yaml
+++ b/cloudformatio.yaml
@@ -110,7 +110,7 @@ Resources:
       UserData: 
         Fn::Base64: |
           #!/bin/bash
-          echo "export OPENAI_API_KEY='${MySecret}'" >> /etc/environment
+          echo "export OPENAI_API_KEY='${OPENAIAPIKEY}'" >> /etc/environment
           echo OPENAI_API_KEY > /var/log/echoSecret.txt
           sudo yum install -y aws-cli
           sudo yum update -y
