--- a/cloudformatio.yaml
+++ b/cloudformatio.yaml
@@ -110,8 +110,8 @@ Resources:
       UserData: 
         Fn::Base64: |
           #!/bin/bash
-          echo "export OPENAI_API_KEY='${OPENAIAPIKEY}'" >> /etc/environment
-          echo OPENAI_API_KEY > /var/log/echoSecret.txt
+          echo "export OPENAIAPIKEY='${OPENAIAPIKEY}'" >> /etc/environment
+          echo OPENAIAPIKEY > /var/log/echoSecret.txt
           sudo yum install -y aws-cli
           sudo yum update -y
           sudo yum install -y nodejs 
