changed github action

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Setze OpenAI API Key
       env:
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        OPENAIAPIKEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         echo "Mein OpenAI API Schlüssel ist ${{ secrets.OPENAI_API_KEY }}"
         # Führen Sie hier Ihre Aktionen aus, die den API-Schlüssel verwenden
