--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,11 +13,11 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Setze OpenAI API Key
+    - name: Setze Discord Token
       env:
-        OPENAIAPIKEY: ${{ secrets.OPENAI_API_KEY }}
+        DISCORDTOKEN: ${{ secrets.DISCORD_TOKEN }}
       run: |
-        echo "Mein OpenAI API Schlüssel ist ${{ secrets.OPENAI_API_KEY }}"
+        echo "Mein OpenAI API Schlüssel ist ${{ secrets.DISCORD_TOKEN }}"
         # Führen Sie hier Ihre Aktionen aus, die den API-Schlüssel verwenden
 
     
