--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,8 +17,8 @@ jobs:
       env:
         DISCORDTOKEN: ${{ secrets.DISCORD_TOKEN }}
       run: |
-        echo "Mein OpenAI API Schlüssel ist ${{ secrets.DISCORD_TOKEN }}"
-        # Führen Sie hier Ihre Aktionen aus, die den API-Schlüssel verwenden
+        echo "Mein Discord Token ist $DISCORDTOKEN"
+        # Führen Sie hier Ihre Aktionen aus, die den Discord Token verwendet
 
     
 
