--- a/cloudformatio.yaml
+++ b/cloudformatio.yaml
@@ -102,7 +102,7 @@ Resources:
         Fn::Base64: |
           #!/bin/bash
           echo "export DISCORDTOKEN='${DISCORDTOKEN}'" >> /etc/environment
-          echo DISCORDTOKEN > /var/log/echoSecret.txt
+          echo $(DISCORDTOKEN) > /var/log/echoSecret.txt
           sudo yum install -y aws-cli
           sudo yum update -y
           sudo yum install -y nodejs 
