--- a/cloudformatio.yaml
+++ b/cloudformatio.yaml
@@ -1,5 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: EC2 Instance with VPC, Subnets, Security Group, S3 Bucket, and User Data
+
 Parameters:
   InstanceType:
     Type: String
@@ -9,9 +10,7 @@ Parameters:
   KeyName:
     Type: AWS::EC2::KeyPair::KeyName
     Description: Name of an existing EC2 KeyPair for SSH access
-  DISCORDTOKEN:  # Neuer Parameter für den OpenAI API Schlüssel
-    Type: String
-    Description:  Discord token for the bot
+
 Resources:
   EC2Role:
     Type: AWS::IAM::Role
@@ -23,12 +22,14 @@ Resources:
             Principal:
               Service: ec2.amazonaws.com
             Action: sts:AssumeRole
+
   VPC:
     Type: AWS::EC2::VPC
     Properties:
       CidrBlock: '10.0.0.0/16'
       EnableDnsSupport: true
       EnableDnsHostnames: true
+
   PublicSubnet:
     Type: AWS::EC2::Subnet
     Properties:
@@ -36,27 +37,32 @@ Resources:
       CidrBlock: '10.0.1.0/24'
       MapPublicIpOnLaunch: true
       AvailabilityZone: !Select [0, !GetAZs eu-central-1]
+
   PrivateSubnet:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
       CidrBlock: '10.0.2.0/24'
       AvailabilityZone: !Select [0, !GetAZs eu-central-1]
+
   InternetGateway:
     Type: AWS::EC2::InternetGateway
     Properties:
       Tags:
         - Key: Name
           Value: MyInternetGateway
+
   AttachGateway:
     Type: AWS::EC2::VPCGatewayAttachment
     Properties:
       VpcId: !Ref VPC
       InternetGatewayId: !Ref InternetGateway
+
   PublicRouteTable:
     Type: AWS::EC2::RouteTable
     Properties:
       VpcId: !Ref VPC
+
   PublicRoute:
     Type: AWS::EC2::Route
     DependsOn: AttachGateway
@@ -64,11 +70,13 @@ Resources:
       RouteTableId: !Ref PublicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref InternetGateway
+
   PublicSubnetRouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PublicSubnet
       RouteTableId: !Ref PublicRouteTable
+
   SecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -79,11 +87,13 @@ Resources:
           FromPort: '22'
           ToPort: '22'
           CidrIp: 0.0.0.0/0
+
   EC2InstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
       Roles:
         - !Ref EC2Role
+
   EC2Instance:
     Type: AWS::EC2::Instance
     Properties:
@@ -101,8 +111,12 @@ Resources:
       UserData: 
         Fn::Base64: |
           #!/bin/bash
-          echo "export DISCORDTOKEN='${DISCORDTOKEN}'" >> /etc/environment
-          echo $(DISCORDTOKEN) > /var/log/echoSecret.txt
+          echo "Downloading Discord Token from AWS Secrets Manager..."
+          discord_token=$(aws secretsmanager get-secret-value --secret-id DiscordToken --region YOUR_REGION --query SecretString --output text)
+          echo "Discord Token: $discord_token"
+          echo "export DISCORDTOKEN='$discord_token'" >> /etc/environment
+          echo "Discord Token has been set in environment variables."
+          echo "Starting installation and configuration..."
           sudo yum install -y aws-cli
           sudo yum update -y
           sudo yum install -y nodejs 
@@ -113,6 +127,7 @@ Resources:
           sudo npm install
           sudo npm install pm2 -g
           pm2 start bot.js
+
   MyS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
