--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -14,14 +14,14 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Setze Discord Token
-      run: aws secretsmanager get-secret-value --secret-id DISCORD_TOKEN --region eu_central_1 --query SecretString --output text >> discord_token.txt
+      run: aws secretsmanager get-secret-value --secret-id DISCORD_TOKEN --region eu-central-1 --query SecretString --output text >> discord_token.txt
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: YOUR_REGION
+        aws-region: eu-central-1
 
     - name: Deploy to AWS CloudFormation
       uses: aws-actions/aws-cloudformation-github-deploy@v1
