--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,12 +12,13 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
-      
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-session-token: ${{ secrets.AWS_SESSIOM_TOKEN  }}
         aws-region: eu-central-1
 
     - name: Setze Discord Token
