--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,6 +29,6 @@ jobs:
       uses: aws-actions/aws-cloudformation-github-deploy@v1
       with:
         name: chatbottest
-        template: cloudformation.yaml
+        template: cloudformatio.yaml
         parameter-overrides: "KeyName=chatbot,DISCORDTOKEN=$(cat discord_token.txt)"
         capabilities: CAPABILITY_IAM
