--- a/cloudformatio.yaml
+++ b/cloudformatio.yaml
@@ -114,13 +114,11 @@ Resources:
       UserData: 
         Fn::Base64: |
           #!/bin/bash
-          echo "Downloading Discord Token from AWS Secrets Manager..."
-          discord_token=$(aws secretsmanager get-secret-value --secret-id DISCORD_TOKEN --region eu-central-1 --query SecretString --output text)
-          echo "Discord Token: $discord_token"
-          echo "export DISCORDTOKEN='$discord_token'" >> /etc/environment
-          echo "Discord Token has been set in environment variables."
-          echo "Starting installation and configuration..."
           sudo yum install -y aws-cli
+          discordtoken=$(aws secretsmanager get-secret-value --secret-id DISCORD_TOKEN --region eu-central-1 --query SecretString --output text)
+          echo "Discord Token: $discordtoken"
+          export DISCORDTOKEN='$(discordtoken)' >> /etc/environment
+          echo "Discord Token has been set in environment variables."
           sudo yum update -y
           sudo yum install -y nodejs 
           sudo yum install -y git
