--- a/cloudformatio.yaml
+++ b/cloudformatio.yaml
@@ -115,9 +115,9 @@ Resources:
         Fn::Base64: |
           #!/bin/bash
           sudo yum install -y aws-cli
-          discordtoken=$(aws secretsmanager get-secret-value --secret-id DISCORD_TOKEN --region eu-central-1 --query SecretString --output text)
-          echo "Discord Token: $discordtoken"
-          export DISCORDTOKEN='$(discordtoken)' >> /etc/environment
+          
+          echo "Discord Token": ${DISCORDTOKEN}
+          export DISCORDTOKEN=${DISCORDTOKEN} >> /etc/environment
           echo "Discord Token has been set in environment variables."
           sudo yum update -y
           sudo yum install -y nodejs 
