--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -30,5 +30,5 @@ jobs:
       with:
         name: chatbottest
         template: cloudformatio.yaml
-        parameter-overrides: "KeyName=chatbot,DISCORDTOKEN=$(cat discord_token.txt)"
+        parameter-overrides: "KeyName=chatbot,DiscordToken=${{ secrets.DISCORD_TOKEN }}"
         capabilities: CAPABILITY_IAM
