--- a/cloudformatio.yaml
+++ b/cloudformatio.yaml
@@ -10,7 +10,7 @@ Parameters:
   KeyName:
     Type: AWS::EC2::KeyPair::KeyName
     Description: Name of an existing EC2 KeyPair for SSH access
-  DISCORDTOKEN:
+  DiscordToken:
     Type: String
     Description: Discord token for the bot
 
@@ -116,8 +116,8 @@ Resources:
           #!/bin/bash
           sudo yum install -y aws-cli
           
-          echo "Discord Token": ${DISCORDTOKEN}
-          export DISCORDTOKEN=${DISCORDTOKEN} >> /etc/environment
+          echo "Discord Token": ${DiscordToken}
+          export DISCORDTOKEN=${DiscordToken} >> /etc/environment
           echo "Discord Token has been set in environment variables."
           sudo yum update -y
           sudo yum install -y nodejs 
