--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -1,4 +1,4 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: "2010-09-09"
 Description: EC2 Instance with VPC, Subnets, Security Group, S3 Bucket, and User Data
 
 Parameters:
@@ -10,7 +10,7 @@ Parameters:
   KeyName:
     Type: AWS::EC2::KeyPair::KeyName
     Description: Name of an existing EC2 KeyPair for SSH access
-  DISCORDTOKEN:
+  DiscordToken:
     Type: String
     Description: Discord token for the bot
 
@@ -19,7 +19,7 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: '2012-10-17'
+        Version: "2012-10-17"
         Statement:
           - Effect: Allow
             Principal:
@@ -29,7 +29,7 @@ Resources:
   VPC:
     Type: AWS::EC2::VPC
     Properties:
-      CidrBlock: '10.0.0.0/16'
+      CidrBlock: "10.0.0.0/16"
       EnableDnsSupport: true
       EnableDnsHostnames: true
 
@@ -37,7 +37,7 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      CidrBlock: '10.0.1.0/24'
+      CidrBlock: "10.0.1.0/24"
       MapPublicIpOnLaunch: true
       AvailabilityZone: !Select [0, !GetAZs eu-central-1]
 
@@ -45,7 +45,7 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      CidrBlock: '10.0.2.0/24'
+      CidrBlock: "10.0.2.0/24"
       AvailabilityZone: !Select [0, !GetAZs eu-central-1]
 
   InternetGateway:
@@ -87,8 +87,8 @@ Resources:
       VpcId: !Ref VPC
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: '22'
-          ToPort: '22'
+          FromPort: "22"
+          ToPort: "22"
           CidrIp: 0.0.0.0/0
 
   EC2InstanceProfile:
@@ -107,17 +107,17 @@ Resources:
       NetworkInterfaces:
         - AssociatePublicIpAddress: true
           DeleteOnTermination: true
-          DeviceIndex: '0'
+          DeviceIndex: "0"
           GroupSet:
             - !Ref SecurityGroup
           SubnetId: !Ref PublicSubnet
-      UserData: 
-        Fn::Base64: |
+      UserData:
+        Fn::Base64: !Sub |
           #!/bin/bash
           sudo yum install -y aws-cli
-          
-          echo "Discord Token": ${DISCORDTOKEN}
-          export DISCORDTOKEN=${DISCORDTOKEN} >> /etc/environment
+
+          echo "Discord Token": ${DiscordToken}
+          export DISCORDTOKEN=${DiscordToken} >> /etc/environment
           echo "Discord Token has been set in environment variables."
           sudo yum update -y
           sudo yum install -y nodejs 
