--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -116,7 +116,9 @@ Resources:
           #!/bin/bash
           sudo yum install -y aws-cli
           echo "Discord Token": ${DiscordToken}
-          export DISCORDTOKEN=${DiscordToken} >> /etc/environment
+          echo "Discord Token REF": Ref: DiscordToken
+          export DISCORDTOKEN=${DiscordToken}
+          export DISCORDTOKEN=Ref: DiscordToken
           echo "Discord Token has been set in environment variables."
           sudo yum update -y
           sudo yum install -y nodejs 
