--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,5 +29,5 @@ jobs:
         with:
           name: chatbottest
           template: cloudformation.yaml
-          parameter-overrides: "KeyName=chatbot,DiscordToken=${{ secrets.DISCORD_TOKEN }}"
+          parameter-overrides: "KeyName=chatbot,DiscordToken=${{ secrets.DISCORD_TOKEN }},OpenAIToken=${{ secrets.OPENAI_API_KEY }},AssistantToken=${{ secrets.ASSISTANT_ID }}"
           capabilities: CAPABILITY_IAM
