--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -131,24 +131,23 @@ Resources:
           SubnetId: !Ref PublicSubnet
       UserData:
         Fn::Base64: !Sub |
-          #!/bin/bash
-          sudo useradd -m -s /bin/bash ec2-user
-          sudo su - ec2-user -c '
-          sudo yum install -y aws-cli
-          echo ${DiscordToken}
-          echo ${OpenAIToken}
-          echo ${AssistantToken}
-          echo export DISCORDTOKEN=${DiscordToken} >> /home/ec2-user/.bashrc
-          echo export OPENAI_API_KEY=${OpenAIToken} >> /home/ec2-user/.bashrc
-          echo export ASSISTANT_ID=${AssistantToken} >> /home/ec2-user/.bashrc
-          sudo git clone https://github.com/BlinkTim/openai-assistants-discord-bot.git /home/ec2-user/openai-assistants-discord-bot
-          sudo yum update -y
-          sudo yum install -y nodejs 
-          sudo yum install -y git
-          sudo yum install -y jq
-          cd /home/ec2-user/openai-assistants-discord-bot
-          sudo npm install
-          sudo npm install pm2 -g
-          pm2 start bot.js
+        #!/bin/bash
+        sudo useradd -m -s /bin/bash ec2-user
+        sudo yum install -y aws-cli
+        sudo yum update -y
+        sudo yum install -y nodejs 
+        sudo yum install -y git
+        sudo yum install -y jq
+        sudo su - ec2-user -c '
+        echo ${DiscordToken}
+        echo ${OpenAIToken}
+        echo ${AssistantToken}
+        echo export DISCORDTOKEN=${DiscordToken} >> /home/ec2-user/.bashrc
+        echo export OPENAI_API_KEY=${OpenAIToken} >> /home/ec2-user/.bashrc
+        echo export ASSISTANT_ID=${AssistantToken} >> /home/ec2-user/.bashrc
+        git clone https://github.com/BlinkTim/openai-assistants-discord-bot.git /home/ec2-user/openai-assistants-discord-bot
+        cd /home/ec2-user/openai-assistants-discord-bot
+        sudo npm install
+        sudo npm install pm2 -g
+        pm2 start bot.js
           '
-
