--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -136,7 +136,7 @@ Resources:
           sudo su - ec2-user -c '
           sudo yum install -y aws-cli
           sudo yum update -y
-          sudo yum install -y nodejs 
+          curl -sL https://rpm.nodesource.com/setup_lts.x | sudo bash -
           sudo yum install -y git
           sudo yum install -y jq
           echo ${DiscordToken}
