--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -137,6 +137,7 @@ Resources:
           sudo yum install -y aws-cli
           sudo yum update -y
           curl -sL https://rpm.nodesource.com/setup_lts.x | sudo bash -
+          sudo yum install -y nodejs 
           sudo yum install -y git
           sudo yum install -y jq
           echo ${DiscordToken}
