--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -150,5 +150,6 @@ Resources:
           cd /home/ec2-user/openai-assistants-discord-bot
           sudo npm install
           sudo npm install pm2 -g
-          pm2 start npm --name Discordbot -- run start --cwd /home/ec2-user/openai-assistants-discord-bot 
+          pm2 start npm --name "bot.js" -- run start --cwd /home/ec2-user/openai-assistants-discord-bot
+
           '
