--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -132,8 +132,6 @@ Resources:
       UserData:
         Fn::Base64: !Sub |
           #!/bin/bash
-          sudo useradd -m -s /bin/bash ec2-user
-          sudo su - ec2-user -c '
           sudo yum install -y aws-cli
           sudo yum update -y
           curl -sL https://rpm.nodesource.com/setup_lts.x | sudo bash -
@@ -143,12 +141,13 @@ Resources:
           echo ${DiscordToken}
           echo ${OpenAIToken}
           echo ${AssistantToken}
-          echo export DISCORDTOKEN=${DiscordToken} >> /home/ec2-user/.bashrc
-          echo export OPENAI_API_KEY=${OpenAIToken} >> /home/ec2-user/.bashrc
-          echo export ASSISTANT_ID=${AssistantToken} >> /home/ec2-user/.bashrc
-          git clone https://github.com/BlinkTim/openai-assistants-discord-bot.git /home/ec2-user/openai-assistants-discord-bot
-          cd /home/ec2-user/openai-assistants-discord-bot
+          echo export DISCORDTOKEN=${DiscordToken} >> /etc/environment
+          echo export OPENAI_API_KEY=${OpenAIToken} >> /etc/environment
+          echo export ASSISTANT_ID=${AssistantToken} >> /etc/environment
+          echo "Discord Token has been set in environment variables."
+          sudo git clone https://github.com/BlinkTim/openai-assistants-discord-bot.git 
+          cd /openai-assistants-discord-bot
           sudo npm install
           sudo npm install pm2 -g
-          pm2 start npm --name Discordbot -- run start --cwd /home/ec2-user/openai-assistants-discord-bot/bot.js
-          '
+          sudo pm2 start npm --name "bot.js" -- run start --cwd /openai-assistants-discord-bot/bot.js
+
