--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -149,5 +149,5 @@ Resources:
           cd /openai-assistants-discord-bot
           sudo npm install
           sudo npm install pm2 -g
-          sudo pm2 start npm --name "bot.js" -- run start --cwd /openai-assistants-discord-bot/bot.js
+          pm2 start bot.js --name bot -- run start --cwd /openai-assistants-discord-bot/
 
