--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -162,4 +162,5 @@ Resources:
           sudo chmod 777 bot.js
           sudo chmod 777 mydata.jsonl
           sudo npm install pm2 -g
+          pm2 startup
           pm2 start bot.js
