--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -147,6 +147,8 @@ Resources:
           sudo yum update -y
           curl -sL https://rpm.nodesource.com/setup_lts.x | sudo bash -
           sudo yum install -y nodejs 
+          sudo npm install
+          sudo npm install pm2 -g
           sudo yum install -y git
           sudo yum install -y jq
           echo ${DiscordToken}
@@ -158,9 +160,6 @@ Resources:
           echo "Discord Token has been set in environment variables."
           sudo git clone https://github.com/BlinkTim/openai-assistants-discord-bot.git 
           cd /openai-assistants-discord-bot
-          sudo npm install
-          sudo chmod 777 bot.js
-          sudo chmod 777 mydata.jsonl
-          sudo npm install pm2 -g
           pm2 startup
           pm2 start bot.js
+          pm2 save
