try bot starting with node

--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -160,6 +160,4 @@ Resources:
           echo "Discord Token has been set in environment variables."
           sudo git clone https://github.com/BlinkTim/openai-assistants-discord-bot.git 
           cd /openai-assistants-discord-bot
-          pm2 startup
-          pm2 start bot.js
-          pm2 save
+          node start bot.js
