--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -141,24 +141,28 @@ Resources:
             - !Ref SecurityGroup
           SubnetId: !Ref PublicSubnet
       UserData:
-        Fn::Base64: !Sub |
-          #!/bin/bash
-          sudo yum install -y aws-cli
-          sudo yum update -y
-          curl -sL https://rpm.nodesource.com/setup_lts.x | sudo bash -
-          sudo yum install -y nodejs 
-          sudo npm install
-          sudo npm install pm2 -g
-          sudo yum install -y git
-          sudo yum install -y jq
-          echo ${DiscordToken}
-          echo ${OpenAIToken}
-          echo ${AssistantToken}
-          echo export DISCORDTOKEN=${DiscordToken} >> /etc/environment
-          echo export OPENAI_API_KEY=${OpenAIToken} >> /etc/environment
-          echo export ASSISTANT_ID=${AssistantToken} >> /etc/environment
-          echo "Discord Token has been set in environment variables."
-          sudo git clone https://github.com/BlinkTim/openai-assistants-discord-bot.git 
-          cd /openai-assistants-discord-bot
-          pm2 start bot.js
-          pm2 startup
+  Fn::Base64: !Sub |
+    #!/bin/bash
+    sudo yum install -y aws-cli
+    sudo yum update -y
+    curl -sL https://rpm.nodesource.com/setup_lts.x | sudo bash -
+    sudo yum install -y nodejs 
+    sudo yum install -y git
+    sudo yum install -y jq
+    echo ${DiscordToken}
+    echo ${OpenAIToken}
+    echo ${AssistantToken}
+    echo export DISCORDTOKEN=${DiscordToken} >> /etc/environment
+    echo export OPENAI_API_KEY=${OpenAIToken} >> /etc/environment
+    echo export ASSISTANT_ID=${AssistantToken} >> /etc/environment
+    echo "Discord Token has been set in environment variables."
+    sudo git clone https://github.com/BlinkTim/openai-assistants-discord-bot.git 
+    cd openai-assistants-discord-bot
+    sudo npm install
+    sudo chmod 777 bot.js
+    sudo chmod 777 mydata.jsonl
+    sudo npm install pm2 -g
+    pm2 startup systemd
+    pm2 save
+    pm2 start bot.js
+
