--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -92,23 +92,12 @@ Resources:
   SecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: Enable SSH and Bot Access
+      GroupDescription: Enable SSH access
       VpcId: !Ref VPC
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: "22"
           ToPort: "22"
-          CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: "80"
-          ToPort: "80"
-          CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: "443"
-          ToPort: "443"
-          CidrIp: 0.0.0.0/0
-      SecurityGroupEgress:
-        - IpProtocol: -1
           CidrIp: 0.0.0.0/0
 
   EC2InstanceProfile:
@@ -141,28 +130,29 @@ Resources:
             - !Ref SecurityGroup
           SubnetId: !Ref PublicSubnet
       UserData:
-  Fn::Base64: !Sub |
-    #!/bin/bash
-    sudo yum install -y aws-cli
-    sudo yum update -y
-    curl -sL https://rpm.nodesource.com/setup_lts.x | sudo bash -
-    sudo yum install -y nodejs 
-    sudo yum install -y git
-    sudo yum install -y jq
-    echo ${DiscordToken}
-    echo ${OpenAIToken}
-    echo ${AssistantToken}
-    echo export DISCORDTOKEN=${DiscordToken} >> /etc/environment
-    echo export OPENAI_API_KEY=${OpenAIToken} >> /etc/environment
-    echo export ASSISTANT_ID=${AssistantToken} >> /etc/environment
-    echo "Discord Token has been set in environment variables."
-    sudo git clone https://github.com/BlinkTim/openai-assistants-discord-bot.git 
-    cd openai-assistants-discord-bot
-    sudo npm install
-    sudo chmod 777 bot.js
-    sudo chmod 777 mydata.jsonl
-    sudo npm install pm2 -g
-    pm2 startup systemd
-    pm2 save
-    pm2 start bot.js
+        Fn::Base64: !Sub |
+          #!/bin/bash
+          sudo yum install -y aws-cli
+          sudo yum update -y
+          curl -sL https://rpm.nodesource.com/setup_lts.x | sudo bash -
+          sudo yum install -y nodejs 
+          sudo yum install -y git
+          sudo yum install -y jq
+          echo ${DiscordToken}
+          echo ${OpenAIToken}
+          echo ${AssistantToken}
+          echo export DISCORDTOKEN=${DiscordToken} >> /etc/environment
+          echo export OPENAI_API_KEY=${OpenAIToken} >> /etc/environment
+          echo export ASSISTANT_ID=${AssistantToken} >> /etc/environment
+          echo "Discord Token has been set in environment variables."
+          sudo git clone https://github.com/BlinkTim/openai-assistants-discord-bot.git 
+          cd openai-assistants-discord-bot
+          sudo npm install
+          sudo chmod +rx bot.js
+          sudo chmod +rx mydata.jsonl
+          sudo npm install pm2 -g
+          pm2 startup systemd
+          pm2 save
+          pm2 start bot.js
+
 
