--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -152,7 +152,8 @@ Resources:
           sudo chmod +rx mydata.jsonl
           sudo npm install pm2 -g
           pm2 startup systemd
-          pm2 save
           pm2 start bot.js
+          pm2 save
+          pm2 monit
 
 
