--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -155,6 +155,6 @@ Resources:
           pm2 start bot.js
           pm2 save
           pm2 startup systemd
-          pm2 start bot.js
+          pm2 start bot.js -f
 
 
